--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -114,10 +114,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Ll-t2-CqK">
-                                <rect key="frame" x="-1" y="20" width="322" height="470"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qk9-df-rfG">
                                 <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                 <subviews>
@@ -475,22 +471,18 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="qk9-df-rfG" firstAttribute="top" secondItem="AJS-T2-4yI" secondAttribute="top" id="2q9-uK-SkK"/>
-                            <constraint firstItem="8Ll-t2-CqK" firstAttribute="top" secondItem="AJS-T2-4yI" secondAttribute="top" id="2sp-sc-itm"/>
                             <constraint firstItem="AJS-T2-4yI" firstAttribute="bottom" secondItem="7xG-As-Qtg" secondAttribute="bottom" constant="20" id="4Al-dN-0fs"/>
                             <constraint firstItem="fNg-J9-z1j" firstAttribute="top" secondItem="Pa6-lx-nwd" secondAttribute="bottom" constant="2" id="7Oj-PH-q8k"/>
-                            <constraint firstAttribute="bottom" secondItem="8Ll-t2-CqK" secondAttribute="bottom" constant="-10" id="8E9-Kw-DVQ"/>
                             <constraint firstItem="fNg-J9-z1j" firstAttribute="leading" secondItem="AJS-T2-4yI" secondAttribute="leading" id="8Sm-0q-7FQ"/>
                             <constraint firstAttribute="trailing" secondItem="Zov-cU-o0b" secondAttribute="trailing" id="9oF-sB-NIS"/>
                             <constraint firstItem="qk9-df-rfG" firstAttribute="leading" secondItem="zeO-je-QmD" secondAttribute="leading" id="B5b-1E-bMd"/>
                             <constraint firstItem="7xG-As-Qtg" firstAttribute="leading" secondItem="AJS-T2-4yI" secondAttribute="leading" constant="16" id="Mv6-V2-RFd"/>
                             <constraint firstItem="Pa6-lx-nwd" firstAttribute="top" secondItem="qk9-df-rfG" secondAttribute="bottom" id="NE2-x1-jfM"/>
                             <constraint firstItem="Zov-cU-o0b" firstAttribute="top" secondItem="fNg-J9-z1j" secondAttribute="bottom" constant="2" id="P9R-v1-FPc"/>
-                            <constraint firstItem="8Ll-t2-CqK" firstAttribute="leading" secondItem="AJS-T2-4yI" secondAttribute="leading" constant="-1" id="Sfp-1B-DUI"/>
                             <constraint firstItem="7xG-As-Qtg" firstAttribute="top" secondItem="Zov-cU-o0b" secondAttribute="bottom" constant="20" id="UuT-2a-y7w"/>
-                            <constraint firstAttribute="trailing" secondItem="8Ll-t2-CqK" secondAttribute="trailing" constant="-1" id="Wzs-2o-K5R"/>
                             <constraint firstItem="AJS-T2-4yI" firstAttribute="trailing" secondItem="7xG-As-Qtg" secondAttribute="trailing" constant="16" id="dDT-5d-0Cf"/>
                             <constraint firstAttribute="trailing" secondItem="Pa6-lx-nwd" secondAttribute="trailing" id="eae-dA-phs"/>
                             <constraint firstAttribute="trailing" secondItem="qk9-df-rfG" secondAttribute="trailing" id="jgt-SO-0Hm"/>
@@ -507,7 +499,6 @@
                         <outlet property="resetButton" destination="N9z-Qk-60v" id="4rR-YS-3xH"/>
                         <outlet property="showButton" destination="7xG-As-Qtg" id="6Ym-1V-LT9"/>
                         <outlet property="sortByView" destination="2L1-lH-SGz" id="svN-gx-ns2"/>
-                        <outlet property="whiteBackground" destination="8Ll-t2-CqK" id="hWz-SC-6MK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Et1-NH-AvO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -744,7 +735,7 @@
                                 <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="-3"/>
                                 <state key="normal" image="IconFilters"/>
                                 <connections>
-                                    <segue destination="R1m-RF-Pek" kind="presentation" identifier="filters" modalPresentationStyle="overFullScreen" id="pMf-jZ-zuc"/>
+                                    <segue destination="R1m-RF-Pek" kind="presentation" identifier="filters" modalPresentationStyle="fullScreen" id="pMf-jZ-zuc"/>
                                 </connections>
                             </button>
                         </subviews>
